a2963e46-2d7f-42eb-b64d-1805a17d9ad0/cb675f93-5046-4219-9ffa-bed6b01190f5/cb24d1f9-d384-4cdb-8274-44c76eb1ab34/graph-f9d5b75a-1610-48e2-a61e-f36426c0fd21/kubernates/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
  namespace: 8b14c5d1-811a-4cc9-8737-683a7a171885
  annotations:
    ngrok.com/ingress-mode: edge
  labels:
    app: rest-app-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
spec:
  ingressClassName: ngrok
  rules:
    - host: honestly-handy-herring.ngrok-free.app
      http:
        paths:
          - path: /febe-rest-cb24d1f9-d384-4cdb-8274-44c76eb1ab34/
            pathType: Prefix
            backend:
              service:
                name: rest-service-cb24d1f9-d384-4cdb-8274-44c76eb1ab34
                port:
                  number: 80
